fixed overflow bugs

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   background: #9bacba;
-  height: 100vh;
+  height: 100%;
   padding: 5%;
   /* width: 80vw; */
   /* margin: auto; */
