--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -1,17 +1,18 @@
 .outerContainer {
   background: #9ba3bc;
   padding-bottom: 10%;
+  height: 100vh;
 }
 
 .galleryContainer {
   background: #9ba3bc;
   /* margin-top: -5%; */
-  height: 90vh;
+  height: 100%;
 }
 
 .carouselContainer {
   padding-top: 15px;
-  height: 90vh;
+  max-height: 40%;
 }
 
 .caption {
@@ -20,5 +21,12 @@
 }
 
 .image {
-  /* max-height: 70vh; */
+  /* max-width: 70vh; */
+}
+@media (max-width: 300px) {
+  .image {
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
 }
